# tic-tac-toe

./: stack.yaml  tic-tac-toe.cabal
app/: CLI.hs  Main.hs
src/: Lib.hs  TicTacToe.hs
