name:                tic-tac-toe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tic-tac-toe#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, TicTacToe
  build-depends:       base >= 4.7 && < 5
                     , array
                     , scotty >= 0.11
                     , wai-extra >= 3.0
                     , text >= 1.2
                     , data-default-class
                     , mtl
                     , transformers
                     , blaze-html
                     , stm
  default-language:    Haskell2010

executable tic-tac-toe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tic-tac-toe
  default-language:    Haskell2010

executable tic-tac-toc-cli
  hs-source-dirs:      app
  main-is:             CLI.hs 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tic-tac-toe
  
source-repository head
  type:     git
  location: https://github.com/githubuser/tic-tac-toe
